@@ -394,12 +394,12 @@ static const int MA_Minimum_Article_Pane_Width = 80;
 	[articleListMenu addItem:[NSMenuItem separatorItem]];
 	[articleListMenu addItem:copyOfMenuWithAction(@selector(viewSourceHomePage:))];
 	NSMenuItem * alternateItem = copyOfMenuWithAction(@selector(viewSourceHomePageInAlternateBrowser:));
-	[alternateItem setKeyEquivalentModifierMask:NSShiftKeyMask];
+	[alternateItem setKeyEquivalentModifierMask:NSAlternateKeyMask];
 	[alternateItem setAlternate:YES];
 	[articleListMenu addItem:alternateItem];
 	[articleListMenu addItem:copyOfMenuWithAction(@selector(viewArticlePage:))];
 	alternateItem = copyOfMenuWithAction(@selector(viewArticlePageInAlternateBrowser:));
-	[alternateItem setKeyEquivalentModifierMask:NSShiftKeyMask];
+	[alternateItem setKeyEquivalentModifierMask:NSAlternateKeyMask];
 	[alternateItem setAlternate:YES];
 	[articleListMenu addItem:alternateItem];
 	[articleList setMenu:articleListMenu];
