@@ -68,7 +68,7 @@ menus. To see a contextual menu, press the Control key and click the item.</p>
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td>Shift-Click</td>
+    <td>Alt-Click</td>
     <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
   </tr>
   <tr>
@@ -128,7 +128,7 @@ menus. To see a contextual menu, press the Control key and click the item.</p>
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td>Shift-Enter/Shift-Return</td>
+    <td>Alt-Enter/Alt-Return</td>
     <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
   </tr>
   <tr>
