@@ -26,6 +26,7 @@ Thanks!
 - Don't select first article when switching folders.
 - Renaming folders now done by editing the name in the folder pane.
 - Added "in phrase" to match text in a search criteria that contains a complete word or phrase.
+- Changed modifier key for overriding default browser preference from shift to option.
 
 2.0.4.2033
 ----------
